--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Buy and sell e books",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon './index.js'"
   },
   "author": "TEJVEER SINGH",
   "license": "ISC",
